Fixe horizontal scroll on datagrid tables

--- a/front/style/manager-space/_tables.scss
+++ b/front/style/manager-space/_tables.scss
@@ -151,7 +151,7 @@
     }
 }
 
-.datagrid__table-manager-ctn {
+.datagrid__table-container {
     width: 100%;
     overflow-x: auto;
 }
@@ -169,7 +169,7 @@
 
 .datagrid__table-manager {
     width: 100%;
-    min-width: 700px;
+    min-width: 850px;
     text-align: left;
     font-family: $font-roboto;
     color: $dark;
